# Portfolio

./: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json
.github/workflows/: angular-app.yml
app/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/backend/scripts/: create_local_table.py  wait_for_dynamodb.py
app/backend/src/portfolio_api/: __init__.py  config.py  container.py  main.py
app/backend/src/portfolio_api/application/ports/: comment_repo.py
app/backend/src/portfolio_api/application/services/comments/: __init__.py  create_comment.py  delete_comment.py  get_comment.py  list_comments.py  update_comment.py
app/backend/src/portfolio_api/domain/: comment.py  errors.py
app/backend/src/portfolio_api/http/: dependencies.py  dto.py  errors.py
app/backend/src/portfolio_api/http/middleware/: correlation_id.py
app/backend/src/portfolio_api/http/routes/: comments.py  health.py
app/backend/src/portfolio_api/infra/dynamo/: __init__.py  comment_repo.py  table.py
app/backend/tests/fakes/: comment_repo.py
app/backend/tests/integration/: test_comments_routes.py
app/backend/tests/unit/: test_comment_services.py
app/frontend/: .dockerignore  Dockerfile  angular.json  eslint.config.mjs  package-lock.json  package.json
docs/: linter.md
frontend/: AGENTS.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/scripts/: add-csp-nonce.js  (+1 more)
infra/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
src/: index.html  styles.scss  test.ts
(+179 files in other folders)
